# mujina

./: CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  README.md
.githooks/: pre-commit
docs/: api.md  architecture.md  cpu-mining.md
mujina-miner/: Cargo.toml
mujina-miner/src/: backplane.rs  board_manager.rs  daemon.rs  job_generator.rs  lib.rs  scheduler.rs  serial.rs  tracing.rs  u256.rs
mujina-miner/src/api/: commands.rs  mod.rs  server.rs  v0.rs
mujina-miner/src/api_client/: types.rs
mujina-miner/src/asic/: hash_thread.rs  mod.rs
mujina-miner/src/asic/bm13xx/: PROTOCOL.md  crc.rs  protocol.rs  test_data.rs  (+1 more)
mujina-miner/src/board/: bitaxe.rs  cpu.rs  emberone.rs  mod.rs  pattern.rs
mujina-miner/src/chip/: bm13xx.rs  mod.rs
mujina-miner/src/cpu_miner/: hasher.rs
mujina-miner/src/hash_thread/: bm13xx.rs  mod.rs  task.rs
mujina-miner/src/hw_trait/: adc.rs  gpio.rs  i2c.rs  mod.rs
mujina-miner/src/job_source/: dummy.rs  extranonce2.rs  forced_rate.rs  job.rs  merkle.rs  messages.rs  mod.rs  stratum_v1.rs  version.rs
mujina-miner/src/peripheral/: emc2101.rs  pmbus.rs  tps546.rs
mujina-miner/src/stratum_v1/: client.rs  connection.rs  error.rs  messages.rs  mod.rs
mujina-miner/src/thermal/: config.rs  controller.rs  fan_pid.rs  filter.rs  mod.rs  state.rs
mujina-miner/src/transport/: serial.rs  usb.rs
mujina-miner/src/types/: debounced_alarm.rs  difficulty.rs  hash_rate.rs  mod.rs
scripts/: setup-hooks.sh
tools/mujina-dissect/: Cargo.toml
tools/mujina-dissect/src/: bm13xx.rs  capture.rs  dissect.rs  i2c.rs  main.rs  output.rs  serial.rs
(+9 files in other folders)
